--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "Primer",
+  "name": "Escapade",
   "version": "1.0.0",
-  "description": "Primer is a modern WordPress theme based on _s.",
+  "description": "Escapade is a travel-oriented child theme for the Primer theme.",
   "main": "index.php",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "godaddy/wp-primer-theme",
+  "repository": "godaddy/wp-escapade-theme",
   "author": "GoDaddy",
   "license": "GPL-2.0",
   "bugs": {
-    "url": "https://github.com/godaddy/wp-primer-theme/issues"
+    "url": "https://github.com/godaddy/wp-escapade-theme/issues"
   },
-  "homepage": "https://wordpress.org/themes/primer/",
+  "homepage": "https://wordpress.org/themes/escapade/",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "~3.0.4",
