--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "escapade",
   "title": "Escapade",
-  "description": "",
+  "description": "Escapade is a Primer child theme with a unique sidebar navigation.",
   "version": "1.0.0",
   "license": "GPL-2.0",
   "scripts": {
