--- a/package.json
+++ b/package.json
@@ -3,19 +3,16 @@
   "title": "Escapade",
   "description": "Escapade is a Primer child theme with a unique sidebar navigation.",
   "version": "0.9.0",
-  "license": "GPL-2.0",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/godaddy/wp-escapade-theme.git"
-  },
   "author": "GoDaddy",
+  "license": "GPL-2.0",
+  "repository": "godaddy/wp-escapade-theme",
+  "homepage": "https://github.com/godaddy/wp-escapade-theme",
   "bugs": {
     "url": "https://github.com/godaddy/wp-escapade-theme/issues"
   },
-  "homepage": "https://github.com/godaddy/wp-escapade-theme",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~3.0.4",
